Fix footer jumping

--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,13 @@ p a {
   font-weight: 500;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
+  justify-content: space-between;
+}
+
 @media only screen and (max-width: 700px) {
   input {
     width: 100px
